#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(ABAMD, 0.0, yamamori@iam.u-tokyo.ac.jp)
AC_CONFIG_SRCDIR([main.c])
#AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lblas':
AC_CHECK_LIB([blas], [main])
# FIXME: Replace `main' with a function in `-lf2c':
AC_CHECK_LIB([f2c], [main])
# FIXME: Replace `main' with a function in `-lgc':
AC_CHECK_LIB([gc], [main])
# FIXME: Replace `main' with a function in `-llapack':
AC_CHECK_LIB([lapack], [main])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-lnetcdf':
AC_CHECK_LIB([netcdf], [main])

#INC="/usr/include"
AC_SUBST(INC)
	
#LIB="/usr/lib"
AC_SUBST(LIB)

#AHOME="/usr/local"
AC_SUBST(ABA)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([malloc.h stddef.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset pow sqrt])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
